--- a/index.html
+++ b/index.html
@@ -7,20 +7,26 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
     <body class="no-margin">
         <div id="wrapper">
             <div class="bg"></div>
             <div class="content">
-                <div class="div-center" align="center">
+                <div align="center">
                     <p class="no-margin university-font">UNIVERSITY OF NEW AMSTERDAM PRESS</p>
-                    <p class="no-margin rose-tulips-liberty-font roses-text">ROSES,</p>
-                    <p class="no-margin rose-tulips-liberty-font tulips-text">TULIPS,</p>
+                    <p class="no-margin rose-tulips-liberty-font roses-text big-first-letter">ROSES,</p>
+                    <p class="no-margin rose-tulips-liberty-font tulips-text big-first-letter">TULIPS,</p>
+                    <p class="no-margin rose-tulips-liberty-font liberty-text big-first-letter">LIBERTY</p>
                     <p class="no-margin rose-tulips-liberty-font and-text">&</p>
-                    <p class="no-margin rose-tulips-liberty-font liberty-text">LIBERTY</p>
                     <p class="no-margin historical-font">A Historical Atlas of the American Continent</p>
                     <a href="https://rtl.miraheze.org/" class="button button-design button-text wiki-button">READ THE WIKI</a>
+                    <p class="reddit-text">
+                        <a href="https://www.reddit.com/r/RosesTulipsAndLiberty/">
+                            <i class="fa fa-reddit reddit-icon"></i> Follow r/RosesTulipsAndLiberty
+                        </a>
+                    </p>
                 </div>
             </div>
         </div>
