--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <title>Roses, Tulips, & Liberty</title>
+        <meta name="description" content="What if the Dutch colonized North America? Roses, Tulips, and Liberty answers that question in the form of a holistic alternate history project." />
         <link rel="stylesheet" href="css/styles-v1.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,8 +21,8 @@
                     <p class="no-margin rose-tulips-liberty-font tulips-text big-first-letter">TULIPS,</p>
                     <p class="no-margin rose-tulips-liberty-font liberty-text big-first-letter">LIBERTY</p>
                     <p class="no-margin rose-tulips-liberty-font and-text">&</p>
-                    <p class="no-margin historical-font">A Historical Atlas of the American Continent</p>
-                    <a href="https://rtl.miraheze.org/" class="button button-design button-text wiki-button">READ THE WIKI</a>
+                    <p class="no-margin historical-font">A Holistic Alternate History</p>
+                    <a href="https://wiki.rosestulipsandliberty.com/" class="button button-design button-text wiki-button">READ THE WIKI</a>
                     <p class="reddit-text">
                         <a href="https://www.reddit.com/r/RosesTulipsAndLiberty/">
                             <i class="fa fa-reddit reddit-icon"></i> Follow r/RosesTulipsAndLiberty
