--- a/index.html
+++ b/index.html
@@ -2,35 +2,58 @@
 
 <html>
     <head>
+        <meta name="theme-color" content="#E1ECEB">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+
         <title>Roses, Tulips, & Liberty</title>
         <meta name="description" content="What if the Dutch colonized North America? Roses, Tulips, and Liberty answers that question in the form of a holistic alternate history project." />
-        <link rel="stylesheet" href="css/styles-v1.css">
+        <link rel="stylesheet" href="css/styles-v2.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+        <style>[data-entrance] { visibility: hidden; }</style>
     </head>
 
     <body class="no-margin">
         <div id="wrapper">
-            <div class="bg"></div>
+            <div data-entrance="custom-fade" data-entrance-delay="3000" class="bg"></div>
             <div class="content">
                 <div align="center">
-                    <p class="no-margin university-font">UNIVERSITY OF NEW AMSTERDAM PRESS</p>
-                    <p class="no-margin rose-tulips-liberty-font roses-text big-first-letter">ROSES,</p>
-                    <p class="no-margin rose-tulips-liberty-font tulips-text big-first-letter">TULIPS,</p>
-                    <p class="no-margin rose-tulips-liberty-font liberty-text big-first-letter">LIBERTY</p>
-                    <p class="no-margin rose-tulips-liberty-font and-text">&</p>
-                    <p class="no-margin historical-font">A Holistic Alternate History</p>
-                    <a href="https://wiki.rosestulipsandliberty.com/" class="button button-design button-text wiki-button">READ THE WIKI</a>
-                    <p class="reddit-text">
-                        <a href="https://www.reddit.com/r/RosesTulipsAndLiberty/">
-                            <i class="fa fa-reddit reddit-icon"></i> Follow r/RosesTulipsAndLiberty
-                        </a>
+                    <p data-entrance="fade-normal" class="no-margin university-font">
+                        UNIVERSITY OF NEW AMSTERDAM PRESS
                     </p>
+                    <p data-entrance="fade-normal" data-entrance-delay="1000" class="no-margin rose-tulips-liberty-font roses-text big-first-letter">
+                        ROSES,
+                    </p>
+                    <p data-entrance="fade-normal" data-entrance-delay="1500" class="no-margin rose-tulips-liberty-font tulips-text big-first-letter">
+                        TULIPS,
+                    </p>
+                    <p data-entrance="fade-normal" data-entrance-delay="2000" class="no-margin rose-tulips-liberty-font liberty-text big-first-letter">
+                        LIBERTY
+                    </p>
+                    <p data-entrance="fade-normal" data-entrance-delay="2000" class="no-margin rose-tulips-liberty-font and-text">
+                        &
+                    </p>
+                    <p data-entrance="fade-normal" data-entrance-delay="3000" class="no-margin historical-font">
+                        A Holistic Alternate History
+                    </p>
+                    <div data-entrance="fade-normal" data-entrance-delay="3000" >
+                        <a id="wiki-button" href="https://wiki.rosestulipsandliberty.com/" target="_blank" class="button button-design button-text wiki-button">
+                            READ THE WIKI
+                        </a>
+                        <p class="reddit-text">
+                            <a href="https://www.reddit.com/r/RosesTulipsAndLiberty/" target="_blank">
+                                <i class="fa fa-reddit reddit-icon"></i> Follow r/RosesTulipsAndLiberty
+                            </a>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </body>
 
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="js/scroll-entrance.js"></script>
 </html>
