--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <title>Roses, Tulips, & Liberty</title>
         <meta name="description" content="What if the Dutch colonized North America? Roses, Tulips, and Liberty answers that question in the form of a holistic alternate history project." />
-        <link rel="stylesheet" href="css/styles-v2.css">
+        <link rel="stylesheet" href="css/styles-v3.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;700&display=swap" rel="stylesheet">
@@ -40,7 +40,7 @@
                         A Holistic Alternate History
                     </p>
                     <div data-entrance="fade-normal" data-entrance-delay="3000" >
-                        <a id="wiki-button" href="https://wiki.rosestulipsandliberty.com/" target="_blank" class="button button-design button-text wiki-button">
+                        <a href="https://rtl.miraheze.org/" target="_blank" class="button button-design button-text wiki-button">
                             READ THE WIKI
                         </a>
                         <p class="reddit-text">
@@ -54,6 +54,6 @@
         </div>
     </body>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script src="js/scroll-entrance.js"></script>
 </html>
