--- a/lang/british.html
+++ b/lang/british.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>RTL British English Translator</title>
+<title>RTL British English Converter</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/diff_match_patch/20121119/diff_match_patch.js"></script>
 <style>
     .highlight {
@@ -13,13 +13,13 @@
 </head>
 <body>
 
-<h2>RTL British English Translator</h2>
+<h2>RTL British English Converter</h2>
 
-<textarea id="inputText" rows="6" cols="50" placeholder="Enter text to translate..."></textarea>
+<textarea id="inputText" rows="6" cols="50" placeholder="Enter text to convert..."></textarea>
 <br>
-<button onclick="translateText()">Translate</button>
+<button onclick="translateText()">Convert</button>
 
-<h3>Translated Text:</h3>
+<h3>Converted Text:</h3>
 <p id="translatedText"></p>
 
 <script>
