--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@
 
             // Check if the URL path starts with "/wiki/"
             if (currentPath.startsWith("/wiki/")) {
-                const newUrl = `https://wiki.rosestulipsandliberty.com.com${currentPath}`;
+                const newUrl = `https://wiki.rosestulipsandliberty.com${currentPath}`;
                 window.location.replace(newUrl); // Redirect
             } else {
                 // Show standard 404 content for other paths
